Navegación entre páginas

--- a/Fonts/entrenamiento.html
+++ b/Fonts/entrenamiento.html
@@ -18,7 +18,8 @@
 		<br>	
 		<div class="d-flex align-items-start">
 			<div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-				<button class="nav-link active  " id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Inicio</button>	
+				<button onclick="inicio()" class="nav-link active  " id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Inicio
+                </button>	
 				<button onclick="entrenamiento()" class="nav-link " id="v-pills-cagar-tab" data-bs-toggle="pill" data-bs-target="#v-pills-cargar" type="button" role="tab" aria-controls="v-pills-cargar" aria-selected="false">Entrenamiento</button>
 				<button onclick="configuracion_apriori()" class="nav-link disabled" id="v-pills-apriori-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Algoritmo Apriori</button>
 				<button onclick="distancias()" class="nav-link disabled" id="v-pills-distancias-tab" data-bs-toggle="pill" data-bs-target="#v-pills-distancias" type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Métricas de similitud</button>
@@ -26,19 +27,11 @@
 
 			</div>
 			<div class="container">
-				<div class="tab-content " id="v-pills-tabContent">
-					<div class="tab-pane fade show active container" align="center" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">			
-						<h1> UNIVERSIDAD NACIONAL AUTÓNOMA DE MÉXICO <h1>
-							<h2> Facultad de Ingeniería <h2>
-							<h3 aling= "center"> Procesamiento y Análisis Inteligente de Textos </h3>	
-							<br><br>
-							<hr>
-							<h3>
-								<h2> Clasificador de Lenguas <h2>
-							<hr>
-							<br>
-							<h4 aling="left">Castillo Reyes Alberto</h4>
-							
+					<div class="tab-pane fade " id="v-pills-cargar" role="tabpanel" aria-labelledby="v-pills-cargar-tab" >			
+						<div class="cargar archivo"> 
+                            
+
+                        </div>
 					</div>
 				</div>
 			</div>
